Feat: List Movies

--- a/starter/src/app/components/misc/home/home.component.html
+++ b/starter/src/app/components/misc/home/home.component.html
@@ -1,3 +1,16 @@
-<p>
-  home works!
-</p>
+<table>
+  <thead>
+    <tr>
+      <th>Room</th>
+      <th>Movie</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let movie of movies">
+      <td>Room {{ movie.id }}</td>
+      <td>{{ movie.title }}</td>
+      <td><button (click)="showContactDetails(movie.id)">Details</button></td>
+    </tr>
+  </tbody>
+</table>
