Feat: Service created just do log

--- a/starter/src/app/components/movie/movie-item/movie-item.component.html
+++ b/starter/src/app/components/movie/movie-item/movie-item.component.html
@@ -4,3 +4,5 @@
 <!-- <tr *ngFor="let movie of movies"> -->
   <h3>({{ movie?.id }}) - {{ movie?.title }}</h3>
 <!-- </tr> -->
+
+<button (click)="incrment()">Increment</button>
