--- a/starter/src/app/components/misc/movie/movie.component.html
+++ b/starter/src/app/components/misc/movie/movie.component.html
@@ -1,3 +1,7 @@
-<p>
-  movie works!
-</p>
+<h2>This Component is pointless but thank you to visit it anyway.</h2>
+
+<div class="center-align">
+    <a [routerLink]="['/home']" class="brand-logo">
+      <img class="img-logo" src="https://t00.deviantart.net/KWCTazLEWqYyd3uaCWu2swXH6ls=/fit-in/700x350/filters:fixed_height(100,100):origin()/pre00/db0c/th/pre/f/2011/108/4/9/pointless_by_tomska-d3e9upp.png" alt="">
+    </a>
+  </div>
