--- a/starter/src/app/app.component.html
+++ b/starter/src/app/app.component.html
@@ -1,8 +1,10 @@
-<h1>Welcome to Ironhack Cinema</h1>
+<app-navbar></app-navbar>
 
-<ul>
-  <li><a [routerLink]="['/home']">Home</a></li>
-  <li><a [routerLink]="['/movie']">Movie</a></li>
-</ul>
+<div class="center-align">
+  <a [routerLink]="['/home']" class="brand-logo">
+    <img class="img-logo" src="https://vignette.wikia.nocookie.net/doblaje/images/3/3a/New_Line_Cinema_Logo.png/revision/latest/scale-to-width-down/640?cb=20171231043314&path-prefix=es" alt="">
+  </a>
+</div>
 
 <router-outlet></router-outlet>
+
