--- a/starter/src/app/components/misc/home/home.component.html
+++ b/starter/src/app/components/misc/home/home.component.html
@@ -1,16 +1,13 @@
-<table>
-  <thead>
-    <tr>
-      <th>Room</th>
-      <th>Movie</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let movie of movies">
-      <td>Room {{ movie.id }}</td>
-      <td>{{ movie.title }}</td>
-      <td><button (click)="showMovie(movie.id)">Details</button></td>
-    </tr>
-  </tbody>
-</table>
+<!-- <div class="container"> -->
+<div class="row">
+  <div class="col s2" *ngFor="let movie of movies">
+    <div class="card-panel hoverable movie">
+      <h4><strong>Room {{ movie.id }}</strong></h4>
+      <a (click)="showMovie(movie.id)">
+        <img class="responsive-img hoverable" src="{{ movie.poster }}" alt="">
+
+      </a>
+    </div>
+  </div>
+</div>
+<!-- </div> -->
